<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:id="@id/main"
    tools:context=".RegistrarActivity"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro_de_usuario"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_marginVertical="30dp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_correo_electronico"
        android:textSize="25sp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:id="@+id/etEmail"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_contra"
        android:textSize="25sp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmar_contrase_a"
        android:textSize="25sp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:id="@+id/etPassword2"
        android:inputType="textPassword"
        />

    <Button

        android:id="@+id/btnRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/orange"
        />

    <Button
        android:id="@+id/btn_a_inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesi"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/green"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginVertical="20dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo"
        android:src="@drawable/img" />



</LinearLayout>