<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".LoginActivity"
    android:id="@+id/main"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inicio_sesion"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_marginVertical="50dp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo_electronico1"
        android:textSize="30sp"
        android:layout_marginHorizontal="30dp"
        android:id="@+id/correoElectronico"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrasena"
        android:textSize="30sp"
        android:layout_marginHorizontal="30dp"
        android:id="@+id/contra"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btninicio_sesion"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/iniciar_sesi"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/green"
        style="@style/Widget.Material3.Button.Icon"
        app:icon="@drawable/check"
        />
    <Button
        android:id="@+id/btnregistrarse1"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/registrarse"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/orange"
        style="@style/Widget.Material3.Button.Icon"

        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginVertical="20dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo"
        android:src="@drawable/img" />

</LinearLayout>