<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".HistorialActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/historial_de_uso"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginVertical="10dp"
            android:textStyle="bold"
            android:textColor="@color/orange"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:endIconMode="custom"
            android:textColorHint="@color/grey"
            android:hint="@string/usuario">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:endIconMode="custom"
            android:textColorHint="@color/grey"
            android:hint="@string/accion">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:endIconMode="custom"
            android:textColorHint="@color/grey"
            android:hint="@string/fecha">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnAgregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agregar"
            android:layout_marginTop="28dp"
            android:textStyle="bold"
            android:backgroundTint="@color/pink"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/btnVolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volver_al_menuPrincipal"
            android:textStyle="bold"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            />


        <Button
            android:id="@+id/btnVer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ver_historial"
            android:textStyle="bold"
            android:backgroundTint="@color/purple"
            android:textColor="@color/white"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>