<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Vistas.ConfiguracionFragment"
    android:background="@drawable/fondo">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/configuracion"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/orange2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/perfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perfil"
            android:padding="8dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:background="@color/orange2"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            />

        <LinearLayout
            android:id="@+id/layoutCerrarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/perfil"
            >

            <TextView
                android:id="@+id/tvCerrarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cerrar_sesion"
                android:padding="8dp"
                android:textSize="17sp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/img"
            android:layout_width="109dp"
            android:layout_height="126dp"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutCerrarSesion" />



    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>